CompiladorP4V2/src/Foo/Compilador.java
/* Generated By:JavaCC: Do not edit this line. Compilador.java */
package Foo;
import Foo.Tabla_Simbolos;
import Foo.Simbolo.Tipo_simbolo;
import Foo.Simbolo.Tipo_variable;
import Foo.Simbolo.Clase_parametro;
import Foo.SimboloNoEncontradoException;
import java.io.File;
import java.io.IOException;
import java.util.LinkedList;

public class Compilador implements CompiladorConstants {
  // IniCio del nivel de declaraciones anidadas
  public static int nivel = 0;

  // Variable de direccion por defecto a 0
  public static long dir = 0;

  public static Tabla_Simbolos tabla = new Tabla_Simbolos();

  public static void main(String args []) throws ParseException
  {
    /* nombre del fichero */
    String nombreArchivo;
    String path = "C:\u005c\u005cUsers\u005c\u005cGord\u005c\u005cDesktop\u005c\u005cprogramas\u005c\u005c";
    if (args [0].equals("-v"))
    {
      System.out.println("Compilacion en modo verbose");
      nombreArchivo = args [1];
    }
    else
    {
      System.out.println("Compilacion sin modo verbose");
      nombreArchivo = args [0];
    }
    /* Completar la ruta del path */
    path += nombreArchivo;
    System.out.println("LEYENDO FICHERO " + nombreArchivo + "\u005cn");
    try
    {
      /* Crear el parser con respecto al fichero */
      Compilador parser = new Compilador(new java.io.FileInputStream(path));
      // Inicializacion de la tabla de simbolos
      tabla.inicializar_tabla();
      int res = Compilador.programa();
      if (args [0].equals("-v"))
      {
        /* Mostrar total de tokens */
        TablaHash.mostrarTokensNormales();
        /* Mostrar total de identificadores */
        TablaHash.mostrarIdentificadores();
      }
      System.out.println("El fichero introducido es correcto");
    }
    catch (Exception e)
    {
      System.out.println("INCORRECTO");
      System.out.println(e.getMessage());
      Compilador.ReInit(System.in);
    }
    catch (Error e)
    {
      // Obtencion del error sintactico 
      int fila = CompiladorTokenManager.input_stream.getBeginLine();
      int columna = CompiladorTokenManager.input_stream.getBeginColumn();
      String tokenMalo = CompiladorTokenManager.input_stream.GetImage();
      ErrorLexico eL = new ErrorLexico(fila, columna, tokenMalo);
    }
  }

/* Construccion del analizador sintactico */

// Regla de programa
  static final public int programa() throws ParseException {
  Token tSim, t;
  Simbolo s;
  Simbolo.Tipo_simbolo tp_Sim;
    try {
      jj_consume_token(tPROGRAMA);
      // Guardado del nombre del programa
          t = jj_consume_token(tIDENTIFICADOR);
      // Insertar en la tabla de simbolos el token del programa
      // no se comprueba porque es el primero
      s = tabla.introducir_programa(t.image, dir);
      jj_consume_token(tPUNTYCOM);
      declaracion_variables();
      declaracion_acciones();
      bloque_sentencias();
      jj_consume_token(0);
      {if (true) return 0;}
    } catch (ParseException e) {
    ErrorSintactico eS = new ErrorSintactico(e);
    {if (true) return 1;}
    }
    throw new Error("Missing return statement in function");
  }

// Regla de bloque_sentencias OK
  static final public void bloque_sentencias() throws ParseException {
  // Declaracion de variables
  Token t;
    try {
      jj_consume_token(tPRINCIPIO);
      lista_sentencias();
      t = jj_consume_token(tFIN);
      // Ocultar los parametros del nivel actual
      tabla.ocultar_parametros(nivel);
      // Detectado el fin de un bloque de sentencias
      // Mostrar el contenido de la tabla Hash
      tabla.mostrarTabla_Simbolos();
    } catch (ParseException e) {
    ErrorSintactico eS = new ErrorSintactico(e);
    }
  }

// Regla de lista_sentencias OK EN DUDA
  static final public void lista_sentencias() throws ParseException {
    try {
      label_1:
      while (true) {
        sentencia();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tSI:
        case tMQ:
        case tESCRIBIR:
        case tLEER:
        case tIDENTIFICADOR:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
      }
    } catch (ParseException e) {
    ErrorSintactico eS = new ErrorSintactico(e);
    }
  }

// Regla de sentencia OK
  static final public void sentencia() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tLEER:
        leer();
        jj_consume_token(tPUNTYCOM);
        break;
      case tESCRIBIR:
        escribir();
        jj_consume_token(tPUNTYCOM);
        break;
      case tIDENTIFICADOR:
        asig_invoc();
        break;
      case tSI:
        seleccion();
        break;
      case tMQ:
        mientras_que();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
    ErrorSintactico eS = new ErrorSintactico(e);
    }
  }

  static final public void asig_invoc() throws ParseException {
    try {
      jj_consume_token(tIDENTIFICADOR);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tOPAS:
        asignacion();
        break;
      case tPUNTYCOM:
      case tPARENTESIS_IZDA:
        invocacion_accion();
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
    ErrorSintactico eS = new ErrorSintactico(e);
    }
  }

// Regla de asignacion OK
  static final public void asignacion() throws ParseException {
    try {
      jj_consume_token(tOPAS);
      expresion();
      jj_consume_token(tPUNTYCOM);
    } catch (ParseException e) {
    ErrorSintactico eS = new ErrorSintactico(e);
    }
  }

// Regla de lista_asignables OK
  static final public void lista_asignables() throws ParseException {
    try {
      identificadores();
    } catch (ParseException e) {
    ErrorSintactico eS = new ErrorSintactico(e);
    }
  }

// Regla de leer OK
  static final public void leer() throws ParseException {
    try {
      jj_consume_token(tLEER);
      jj_consume_token(tPARENTESIS_IZDA);
      lista_asignables();
      jj_consume_token(tPARENTESIS_DCHA);
    } catch (ParseException e) {
    ErrorSintactico eS = new ErrorSintactico(e);
    }
  }

// Regla de escribir OK
  static final public void escribir() throws ParseException {
    try {
      jj_consume_token(tESCRIBIR);
      jj_consume_token(tPARENTESIS_IZDA);
      lista_escribibles();
      jj_consume_token(tPARENTESIS_DCHA);
    } catch (ParseException e) {
    ErrorSintactico eS = new ErrorSintactico(e);
    }
  }

// Regla de lista_escribibles OK
  static final public void lista_escribibles() throws ParseException {
    try {
      escribible();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tCOMA:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_2;
        }
        jj_consume_token(tCOMA);
        escribible();
      }
    } catch (ParseException e) {
    ErrorSintactico eS = new ErrorSintactico(e);
    }
  }

// Regla de lista_escribibles OK
  static final public void escribible() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tCONSTCHAR:
        jj_consume_token(tCONSTCHAR);
        break;
      case tCONSTCAD:
        jj_consume_token(tCONSTCAD);
        break;
      case tENTACAR:
        jj_consume_token(tENTACAR);
        jj_consume_token(tPARENTESIS_IZDA);
        jj_consume_token(tCONSTANTE_NUMERICA);
        jj_consume_token(tPARENTESIS_DCHA);
        break;
      case tIDENTIFICADOR:
        jj_consume_token(tIDENTIFICADOR);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
    ErrorSintactico eS = new ErrorSintactico(e);
    }
  }

// Regla de invocacion accion OK
  static final public void invocacion_accion() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tPARENTESIS_IZDA:
        argumentos();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(tPUNTYCOM);
    } catch (ParseException e) {
    ErrorSintactico eS = new ErrorSintactico(e);
    }
  }

//Regla de mientras que OK
  static final public void mientras_que() throws ParseException {
    try {
      jj_consume_token(tMQ);
      expresion();
      lista_sentencias();
      jj_consume_token(tFMQ);
    } catch (ParseException e) {
    ErrorSintactico eS = new ErrorSintactico(e);
    }
  }

// Regla para los argumentos OK
  static final public void argumentos() throws ParseException {
    try {
      jj_consume_token(tPARENTESIS_IZDA);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tMINUS:
      case tNOT:
      case tTRUE:
      case tFALSE:
      case tENTACAR:
      case tCARAENT:
      case tCONSTCHAR:
      case tCONSTCAD:
      case tCONSTANTE_NUMERICA:
      case tIDENTIFICADOR:
      case tPARENTESIS_IZDA:
        lista_expresiones();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(tPARENTESIS_DCHA);
    } catch (ParseException e) {
    ErrorSintactico eS = new ErrorSintactico(e);
    }
  }

// Regla de lista de expresiones
  static final public void lista_expresiones() throws ParseException {
    try {
      expresion();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tCOMA:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_3;
        }
        jj_consume_token(tCOMA);
        expresion();
      }
    } catch (ParseException e) {
    ErrorSintactico eS = new ErrorSintactico(e);
    }
  }

// Regla de expresion OK
  static final public Simbolo.Tipo_variable expresion() throws ParseException {
  // Declaracion de expresiones a analizar
  Simbolo.Tipo_variable tpExp1, tpExp2;
    try {
      // Obtencion de la primera expresion
          tpExp1 = expresion_simple();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tMAYOR:
        case tMENOR:
        case tIGUAL:
        case tMAI:
        case tMEI:
        case tNI:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_4;
        }
        operador_relacional();
        // Obtencion de la segunda expresion
              tpExp2 = expresion_simple();
        // Evaluacion de los datos
        if ((tpExp1 != Simbolo.Tipo_variable.DESCONOCIDO)
        && (tpExp2 != Simbolo.Tipo_variable.DESCONOCIDO) && (tpExp1 != tpExp2)) {
           // Comprobacion de si es booleano o no 
           ErrorSemantico eSM = new ErrorSemantico("Los operandos deben ser del mismo tipo");
        }
      }
    } catch (ParseException e) {
    ErrorSintactico eS = new ErrorSintactico(e);
    }
  }

// Regla de operador_relacional OK
  static final public void operador_relacional() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tIGUAL:
        jj_consume_token(tIGUAL);
        break;
      case tMENOR:
        jj_consume_token(tMENOR);
        break;
      case tMEI:
        jj_consume_token(tMEI);
        break;
      case tNI:
        jj_consume_token(tNI);
        break;
      case tMAI:
        jj_consume_token(tMAI);
        break;
      case tMAYOR:
        jj_consume_token(tMAYOR);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
    ErrorSintactico eS = new ErrorSintactico(e);
    }
  }

// Regla operador aditivo OK
  static final public void operador_aditivo() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tPLUS:
        jj_consume_token(tPLUS);
        break;
      case tMINUS:
        jj_consume_token(tMINUS);
        break;
      case tOR:
        jj_consume_token(tOR);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
    ErrorSintactico eS = new ErrorSintactico(e);
    }
  }

// regla de expresion simple OK
  static final public RegistroExp expresion_simple() throws ParseException {
  // Declaracion de variables
  RegistroExp regTerm1, regTerm2, regResult;
  TipoOperador op;
  boolean ok;
    try {
      // Primer termino de la expresion
          regTerm1 = termino();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tPLUS:
        case tMINUS:
        case tOR:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_5;
        }
        // Operador de la expresion
              op = operador_aditivo();
        // Segundo termino de la expresion
              regTerm2 = termino();
        // Resultado de evaluar la expresion
        regResult = new RegistroExp();
        ok = true;

        // Evaluar el simbolo introducido
        switch(op) {
          case TipoOperador.Suma:
                // El operador es una suma

                // Evaluar primer termino de la expresion
                if ((regTerm1.getTipo() != Simbolo.Tipo_variable.DESCONOCIDO)
                        && (regTerm1.getTipo() != Simbolo.Tipo_variable.ENTERO))
                {
                          ErrorSemantico eSM = new ErrorSemantico("El operador 1 debe ser entero");
                          ok = false;
                }
                // Evaluar segundo termino de la expresion
                if ((regTerm2.getTipo() != Simbolo.Tipo_variable.DESCONOCIDO)
                        && (regTerm2.getTipo() != Simbolo.Tipo_variable.ENTERO))
                {
                          ErrorSemantico eSM = new ErrorSemantico("El operador 2 debe ser entero");
                          ok = false;
                }
                // Comprobar que todo ha ido bien y evaluar la expresion
                if (ok) {
                  // Calculo de la expresion
                  if (regTerm1.getTipo() != Simbolo.Tipo_variable.DESCONOCIDO
                                && regTerm2.getTipo() != Simbolo.Tipo_variable.DESCONOCIDO)
                  {
                        // Tipo de la nueva expresion
                        regResult.setTipo(Simbolo.Tipo_variable.ENTERO);

                                        // Extracion de los valores numericos de cada operador
                                int operando1 = regTerm1.getValorEnt();
                                int operando2 = regTerm1.getValorEnt();

                                        // Suma de los operandos numericos
                                int resul = operando1 + operando2;

                                // Asignacion del resultado a la expresion resultado 
                        regResult.setValorEnt(resul);
                  }
                  else
                  {
                    // El tipo de la expresion es desconocido
                    regResult.setTipo(Simbolo.Tipo_variable.DESCONOCIDO);
                  }
                }
                break;
                case TipoOperador.Resta:
                // El operador es una resta
